# matrix-calculator

./: CMakeLists.txt  README.md
include/: gui.hpp  matrix.hpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrix.hpp
src/gui/: gui.cpp  gui.hpp
src/matrix.cpp/: matrix.h
